# QuSpin-rust

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEEDBACK.md  Ion.toml  LICENSE  RUST_REWRITE.md  index.html  justfile  meson.build  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/skills/: ion-cli
.github/PULL_REQUEST_TEMPLATE/: port_example.md
.github/workflows/: ci.yaml  docs.yml
api/operators/: index.html
cpp/: meson.build
cpp/test/: qmatrix_sketch.cpp  scratch.cpp
crates/bitbasis/: Cargo.toml
crates/quspin-basis/: Cargo.toml
crates/quspin-basis/src/: bfs.rs  boson.rs  dispatch.rs  expand.rs  fermion.rs  generic.rs  lattice.rs  lib.rs  orbit.rs  seed.rs  space.rs  spin.rs  sym.rs  sym_element.rs  traits.rs
crates/quspin-basis/src/dispatch/: bit.rs  dit.rs  macros.rs  quat.rs  trit.rs  types.rs  validate.rs
crates/quspin-bitbasis/: Cargo.toml
crates/quspin-bitbasis/src/: benes.rs  int.rs  lib.rs  manip.rs  state_graph.rs  state_transitions.rs  test_graphs.rs  transform.rs
crates/quspin-core/: Cargo.toml
crates/quspin-core/src/: error.rs  lib.rs  operator.rs  primitive.rs
crates/quspin-core/src/basis/: bfs.rs  boson.rs  dispatch.rs  dit.rs  expand.rs  fermion.rs  generic.rs  group.rs  lattice.rs  mod.rs  orbit.rs  seed.rs  space.rs  spin.rs  sym.rs  sym_basis.rs  sym_grp.rs  traits.rs
crates/quspin-core/src/basis/hardcore/: dispatch.rs  mod.rs
crates/quspin-core/src/basis/symmetry/: dispatch.rs  dit.rs  group.rs  mod.rs  orbit.rs  traits.rs
crates/quspin-core/src/basis/symmetry/group/: dispatch.rs  dit.rs  dit_inner.rs  fermion.rs  fermion_grp.rs  inner.rs  mod.rs  orbit.rs  spin.rs  spin_inner.rs  traits.rs  value_perm.rs
crates/quspin-core/src/bitbasis/: benes.rs  gen_local_op.rs  int.rs  manip.rs  mod.rs  transform.rs
crates/quspin-core/src/expm/: algorithm.rs  compute.rs  linear_operator.rs  mod.rs  norm_est.rs  params.rs
crates/quspin-core/src/hamiltonian/: ham.rs  inner.rs  mod.rs  schrodinger.rs
crates/quspin-core/src/hamiltonian/bond/: dispatch.rs  hamiltonian.rs  mod.rs  operator.rs
crates/quspin-core/src/hamiltonian/boson/: dispatch.rs  hamiltonian.rs  mod.rs  op.rs  operator.rs
crates/quspin-core/src/hamiltonian/fermion/: dispatch.rs  hamiltonian.rs  mod.rs  op.rs  operator.rs
crates/quspin-core/src/hamiltonian/hardcore/: dispatch.rs  hamiltonian.rs  mod.rs  op.rs
crates/quspin-core/src/hamiltonian/pauli/: operator.rs
crates/quspin-core/src/hamiltonian/spin/: dispatch.rs  hamiltonian.rs  mod.rs  op.rs  operator.rs
crates/quspin-core/src/krylov/: basis.rs  eig.rs  ftlm.rs  ftlm_dynamic.rs  ltlm.rs  mod.rs
crates/quspin-core/src/linear_operator/: fn_op.rs  mod.rs  qmatrix_op.rs
crates/quspin-core/src/operator/: apply.rs  mod.rs
crates/quspin-core/src/operator/bond/: dispatch.rs  mod.rs  operator.rs
crates/quspin-core/src/operator/boson/: dispatch.rs  mod.rs  operator.rs
crates/quspin-core/src/operator/fermion/: dispatch.rs  mod.rs  operator.rs
crates/quspin-core/src/operator/monomial/: dispatch.rs  mod.rs  operator.rs
crates/quspin-core/src/operator/pauli/: dispatch.rs  mod.rs  operator.rs
crates/quspin-core/src/operator/spin/: dispatch.rs  mod.rs  operator.rs
crates/quspin-core/src/qmatrix/: build.rs  dispatch.rs  matrix.rs  mod.rs  ops.rs
crates/quspin-core/tests/: matrix_display.rs
crates/quspin-expm/: Cargo.toml
crates/quspin-ffht/: Cargo.toml  build.rs
crates/quspin-krylov/: Cargo.toml
crates/quspin-matrix/: Cargo.toml
crates/quspin-matrix/src/: apply.rs  csr_slab.rs  dispatch.rs  lib.rs  owned_qmatrix_op.rs  qmatrix_helpers.rs  qmatrix_op.rs
crates/quspin-matrix/src/hamiltonian/: ham.rs  inner.rs  mod.rs  schrodinger.rs
crates/quspin-matrix/src/qmatrix/: build.rs  dispatch.rs  matrix.rs  ops.rs
crates/quspin-matrix/tests/: csr_slab.rs
crates/quspin-operator/: Cargo.toml
crates/quspin-operator/src/: lib.rs  state_graph.rs  state_transitions.rs
crates/quspin-operator/src/bond/: dispatch.rs  mod.rs  operator.rs
crates/quspin-operator/src/boson/: dispatch.rs  mod.rs  operator.rs
crates/quspin-operator/src/fermion/: dispatch.rs  mod.rs  operator.rs
crates/quspin-operator/src/monomial/: dispatch.rs  mod.rs  operator.rs
crates/quspin-operator/src/pauli/: dispatch.rs  mod.rs  operator.rs
crates/quspin-operator/src/spin/: dispatch.rs  mod.rs  operator.rs
crates/quspin-py/: Cargo.toml
crates/quspin-py/src/: basis.rs  dispatch.rs  dtype.rs  error.rs  expm.rs  ffht.rs  hamiltonian.rs  krylov.rs  lib.rs  linear_operator.rs  macros.rs  qmatrix.rs  schrodinger.rs  symmetry.rs
crates/quspin-py/src/basis/: boson.rs  dit.rs  fermion.rs  generic.rs  hardcore.rs  mod.rs  spin.rs  sym_element.rs  symmetry.rs
crates/quspin-py/src/basis/hardcore/: dispatch.rs  mod.rs
crates/quspin-py/src/basis/symmetry/: dispatch.rs  mod.rs
crates/quspin-py/src/hamiltonian/: bond.rs  boson.rs  dispatch.rs  fermion.rs  hardcore.rs  mod.rs  parse.rs
crates/quspin-py/src/operator/: bond.rs  boson.rs  fermion.rs  mod.rs  monomial.rs  pauli.rs
crates/quspin-py/src/qmatrix/: dispatch.rs  mod.rs
crates/quspin-types/: Cargo.toml
docs/: boson_basis_redesign.md  c_ffi_design.md  dispatch.md  fermionic_sign_plan.md  hamiltonian_design.md  index.md  krylov_plan.md  orbit_simd_plan.md  python_bindings_plan.md  spin_basis_redesign.md
docs/api/: basis.md  operators.md  qmatrix.md  symmetry.md
docs/guide/: petsc4py.md  symmetry.md
docs/plans/: 2026-04-26-python-symmetry-group-api.md  2026-05-06-petsc4py-csr-slab-impl.md
docs/slides/: contributor-intro.md
examples/: README.md  petsc4py_chunked_build.py
include/quspin/: operator.hpp
pr-preview/pr-109/: sitemap.xml
pr-preview/pr-110/: objects.inv  sitemap.xml
pr-preview/pr-111/: sitemap.xml
pr-preview/pr-113/: 404.html  index.html  sitemap.xml
pr-preview/pr-64/: objects.inv  sitemap.xml
scripts/: benchmark.py  dimer_chain.py  gen_test_matrices.py  symmetry_group_demo.py
search/: search_index.json
test/: basis_scratch.cpp  bitset.cpp  qmatrix_sketch.cpp  scratch.cpp
(+114 files in other folders)
