[package]
name = "quspin-basis"
version.workspace = true
edition.workspace = true

[features]
large-int = ["quspin-bitbasis/large-int"]

[dependencies]
quspin-types = { path = "../quspin-types" }
quspin-bitbasis = { path = "../quspin-bitbasis" }
ndarray = { workspace = true }
num-complex = { workspace = true }
rayon = { workspace = true }
ruint = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
quspin-bitbasis = { path = "../quspin-bitbasis", features = ["test-graphs"] }
quspin-operator = { path = "../quspin-operator" }
