[package]
name = "quspin-bitbasis"
version.workspace = true
edition.workspace = true

[features]
large-int = []

[dependencies]
quspin-types = { path = "../quspin-types" }
ruint = { workspace = true }
bytemuck = { workspace = true }
smallvec = { workspace = true }
num-complex = { workspace = true }
