[package]
name = "quspin-bitbasis"
version.workspace = true
edition.workspace = true

[features]
large-int = []
# Enables the `test_graphs` module with reusable StateTransitions
# implementations for tests (XAllSites, XXYYNearestNeighbor, …).
# Enable via `[dev-dependencies] quspin-bitbasis = { ..., features =
# ["test-graphs"] }` in downstream crates; zero cost when disabled.
test-graphs = []

[dependencies]
quspin-types = { path = "../quspin-types" }
ruint = { workspace = true }
bytemuck = { workspace = true }
smallvec = { workspace = true }
num-complex = { workspace = true }
