[package]
name = "quspin-core"
version.workspace = true
edition.workspace = true

[features]
large-int = ["quspin-matrix/large-int"]

[dependencies]
quspin-types = { path = "../quspin-types" }
quspin-bitbasis = { path = "../quspin-bitbasis" }
quspin-operator = { path = "../quspin-operator" }
quspin-basis = { path = "../quspin-basis" }
quspin-matrix = { path = "../quspin-matrix" }
quspin-expm = { path = "../quspin-expm" }
quspin-krylov = { path = "../quspin-krylov" }

[dev-dependencies]
num-complex = { workspace = true }
smallvec = { workspace = true }
